修改config設定
